--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,13 +19,11 @@ html {
     --light-bg-navbar-color: rgba(245, 245, 247, .8);
     --light-text-navbar-color: #0000ff;
     --light-border-navbar-color: 1px solid rgba(255, 255, 255, 0.28);
-    --light-text: #d9d9e7;
     /* Dark mode */
 
     --dark-bg-navbar-color: rgba(0, 0, 0, 0.8);
     --dark-text-navbar-color: #d9d9e7;
     --dark-border-navbar-color: 1px solid rgba(0, 0, 0, 0.28);
-    --dark-text: #ffffff;
 
 }
 
